# plexname

./: .gitignore  LICENSE  README.md  config.py  medianame.py  movie_fix.py  pyproject.toml  test_medianame.py  test_movie_fix.py
.github/workflows/: tests.yml
