[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "plexname"
version = "1.0.0"
description = "Create Plex-compatible folders from IMDb/TMDB"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Pascal Koch"}]
dependencies = ["requests"]

[tool.setuptools]
py-modules = ["movie_fix", "config"]

[project.scripts]
plexname = "movie_fix:main"
