[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "medianame"
version = "1.3.0"
description = "Create Plex- or Jellyfin-compatible folders from IMDb/TMDB, and scan source folders to move/copy media into them"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Pascal Koch"}]
keywords = ["plex", "jellyfin", "imdb", "tmdb", "media", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = ["requests", "guessit"]

[project.urls]
Homepage = "https://github.com/psclkoch/medianame"
Repository = "https://github.com/psclkoch/medianame"
Issues = "https://github.com/psclkoch/medianame/issues"

[tool.setuptools]
py-modules = ["medianame", "config"]

[project.scripts]
medianame = "medianame:main"
